Global revision of text

--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -105,7 +105,7 @@ During this Scenario:
   \item Players can use their Deck of Might \& Magic when paying gold to defend their Faction Town.
   \item Ignore Combat encounters on the Field with the Grail.
   \item Players may not Visit the Field with the Grail Token unless they have already Visited at least two Obelisks or the Grail Token has been taken by any Hero at least once.
-  \item To obtain the Grail Token, a player’s Hero must spend 2 MPs on the Field with the Grail.
+  \item To obtain the Grail Token, a player’s Hero must spend 2 \svgeven{movement} on the Field with the Grail.
   \item If a player does not possess the title of ``\textcolor{darkcandyapplered}{Blood Knight},'' they must Remove a Faction Unit Card from their Unit Deck immediately after obtaining the Grail Token. This effect can only occur once per player.
   \item If another Hero defeats the Hero with the Grail Token, they also take the Grail Token.
   \item If a Hero with the Grail Token Surrenders, the Grail Token is placed on the hex where the Hero Surrendered.
