--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -77,7 +77,7 @@ During this Scenario:
       \item Place the Main Hero when defeated.
       \item Temporarily transport the army to, for 8 \svg{gold}, when the Random Town is attacked.
     \end{itemize}
-  \item The first player to Visit the Dragon Utopia (after defeating the defending Azure Unit(s)) draws Cards from the Neutral Units \azure\ Deck until a Dragon not associated with any Faction is drawn.
+  \item The first player to Visit the Dragon Utopia (after defeating the defending \azure\ Unit(s)) draws Cards from the Neutral Units \azure\ Deck until a Dragon not associated with any Faction is drawn.
     The player may immediately Recruit that Dragon for free.
 \end{itemize}
 
