--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -57,15 +57,15 @@ Players get VPs for:
 \end{itemize}
 \textbf{\nth{3} Round:}
 \begin{itemize}
-  \item Gain Citadel for free. If you already had it, gain 1 VP.
+  \item Build Citadel for free. If you already had it, gain 1 VP.
 \end{itemize}
 \textbf{\nth{4} Round:}
 \begin{itemize}
-  \item Gain \silver\ dwelling for free. If you already had it, gain 2 VP.
+  \item Build \silver\ dwelling for free. If you already had it, gain 2 VP.
 \end{itemize}
 \textbf{\nth{5} Round:}
 \begin{itemize}
-  \item Gain \golden\ dwelling for free. If you already had it, gain 3 VP.
+  \item Build \golden\ dwelling for free. If you already had it, gain 3 VP.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
