Update pot/po files

--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -134,7 +134,7 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
 \begin{itemize}
   \item In Round 10, a Boss Army spawns. It is different from previous armies because it is Reinforced from a fixed pool of Neutral Units (Reinforcement pool = number in brackets in the table below).
   \item At the beginning of the \nth{2} Combat Round and every following Round, 2 Units Reinforce the remaining army from the shuffled reinforcement pool (up to a maximum of 5 Units) to continue the fight until either the player retreats or every Neutral Unit from the Reinforcement pool is killed. \textit{If the number of enemy Units at the beginning of a Round is 1 or lower, draw up to a total of 4 Units (i.e., there are always 4 or 5 enemy Units on the board after Reinforcing, if available).}
-  \item Place the Reinforcing Units on the enemy base line, starting from the left with the lowest Initiative (\svg{unit_ranged} Units first). If necessary, continue on the next line in the same order.
+  \item Place the Reinforcing Units on the enemy backline, starting from the left with the lowest Initiative (\svg{unit_ranged} Units first). If necessary, continue on the next line in the same order.
   \item When a player retreats, the enemy army draws up to a minimum of 4 Units and takes these as starting Units to the next fight.
 \end{itemize}
 
