--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-04-01 12:55+0000\n"
-"PO-Revision-Date: 2025-05-04 14:05+0000\n"
+"PO-Revision-Date: 2025-06-19 01:14+0200"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/clash-scenarios/bloody_grail/cs/>\n"
@@ -386,7 +386,7 @@ msgid ""
 "  \\item Players can use their Deck of Might \\& Magic when paying gold to defend their Faction Town.\n"
 "  \\item Ignore Combat encounters on the Field with the Grail.\n"
 "  \\item Players may not Visit the Field with the Grail Token unless they have already Visited at least two Obelisks or the Grail Token has been taken by any Hero at least once.\n"
-"  \\item To obtain the Grail Token, a player’s Hero must spend 2 MPs on the Field with the Grail.\n"
+"  \\item To obtain the Grail Token, a player’s Hero must spend 2 \svgeven{movement} on the Field with the Grail.\n"
 "  \\item If a player does not possess the title of ``\\textcolor{darkcandyapplered}{Blood Knight},'' they must Remove a Faction Unit Card from their Unit Deck immediately after obtaining the Grail Token. This effect can only occur once per player.\n"
 "  \\item If another Hero defeats the Hero with the Grail Token, they also take the Grail Token.\n"
 "  \\item If a Hero with the Grail Token Surrenders, the Grail Token is placed on the hex where the Hero Surrendered.\n"
@@ -427,7 +427,7 @@ msgstr ""
 "  \\item Hráči mohou použít svůj Balíček Síly a Magie při placení zlata na obranu městské oblasti své Frakce.\n"
 "  \\item Ignorujte střety v Souboji na Poli s Grálem.\n"
 "  \\item Hráči nemohou Navštívit Pole se Žetonem Grálu, dokud již nenavštívili alespoň dva Obelisky nebo Žeton Grálu nebyl získán jakýmkoli Hrdinou alespoň jednou.\n"
-"  \\item Aby hráč získal Žeton Grálu, musí jeho Hrdina zaplatit 2 MP na Poli s Grálem.\n"
+"  \\item Aby hráč získal Žeton Grálu, musí jeho Hrdina zaplatit 2 \svgeven{movement} na Poli s Grálem.\n"
 "  \\item Pokud hráč nemá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, musí okamžitě po získání Žetonu Grálu odstranit Kartu Jednotky své Frakce z Balíčku Jednotek. Tento efekt může nastat pouze jednou na hráče.\n"
 "  \\item Pokud jiný Hrdina porazí Hrdinu s Žetonem Grálu, také získá Žeton Grálu.\n"
 "  \\item Pokud se Hrdina s Žetonem Grálu vzdá, Žeton Grálu je umístěn na Pole, kde se Hrdina vzdal.\n"
