--- a/translations/bloody_grail.tex/pl.po
+++ b/translations/bloody_grail.tex/pl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-04-01 12:55+0000\n"
-"PO-Revision-Date: 2024-10-29 23:06+0000\n"
+"PO-Revision-Date: 2025-06-19 01:14+0200"
 "Last-Translator: krazanas <krazi321@gmail.com>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/clash-scenarios/bloody_grail/pl/>\n"
@@ -389,7 +389,7 @@ msgid ""
 "  \\item Players can use their Deck of Might \\& Magic when paying gold to defend their Faction Town.\n"
 "  \\item Ignore Combat encounters on the Field with the Grail.\n"
 "  \\item Players may not Visit the Field with the Grail Token unless they have already Visited at least two Obelisks or the Grail Token has been taken by any Hero at least once.\n"
-"  \\item To obtain the Grail Token, a player’s Hero must spend 2 MPs on the Field with the Grail.\n"
+"  \\item To obtain the Grail Token, a player’s Hero must spend 2 \svgeven{movement} on the Field with the Grail.\n"
 "  \\item If a player does not possess the title of ``\\textcolor{darkcandyapplered}{Blood Knight},'' they must Remove a Faction Unit Card from their Unit Deck immediately after obtaining the Grail Token. This effect can only occur once per player.\n"
 "  \\item If another Hero defeats the Hero with the Grail Token, they also take the Grail Token.\n"
 "  \\item If a Hero with the Grail Token Surrenders, the Grail Token is placed on the hex where the Hero Surrendered.\n"
@@ -430,7 +430,7 @@ msgstr ""
 "  \\item Gracze mogą używać swojej Talii Mocy i Magii, gdy płacą złoto za obronę Miasta swojej Frakcji.\n"
 "  \\item Zignoruj walkę z Jednostkami Neutralnymi na polu z Graalem.\n"
 "  \\item Gracze nie mogą odwiedzać pola z Żetonem Graala, chyba że wcześniej odwiedzili co najmniej dwa Obeliski lub Żeton Graala został zdobyty przez jakiegokolwiek Bohatera przynajmniej raz.\n"
-"  \\item Aby zdobyć Żeton Graala, Bohater musi wydać 2 punkty ruchu na polu z Graalem.\n"
+"  \\item Aby zdobyć Żeton Graala, Bohater musi wydać 2 \svgeven{movement} na polu z Graalem.\n"
 "  \\item Jeśli gracz nie posiada tytułu ,,\\textcolor{darkcandyapplered}{Rycerza Krwi}'', musi usunąć Kartę Jednostki Frakcji ze swojej Talii Jednostek natychmiast po zdobyciu Żetonu Graala. Ten efekt występuje tylko raz na gracza.\n"
 "  \\item Jeśli inny Bohater pokona Bohatera z Żetonem Graala, wygrany przechwytuje Żeton.\n"
 "  \\item Jeśli Bohater z Żetonem Graala podda się, Żeton Graala zostaje umieszczony na polu, na którym Bohater się poddał.\n"
