--- a/translations/dragoncurse_castle.tex/dragoncurse_castle.tex.pot
+++ b/translations/dragoncurse_castle.tex/dragoncurse_castle.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-04-01 12:55+0000\n"
+"POT-Creation-Date: 2025-06-19 01:13+0200"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -255,7 +255,7 @@ msgid ""
 "      \\item Place the Main Hero when defeated.\n"
 "      \\item Temporarily transport the army to, for 8 \\svg{gold}, when the Random Town is attacked.\n"
 "    \\end{itemize}\n"
-"  \\item The first player to Visit the Dragon Utopia (after defeating the defending Azure Unit(s)) draws Cards from the Neutral Units \\azure\\ Deck until a Dragon not associated with any Faction is drawn.\n"
+"  \\item The first player to Visit the Dragon Utopia (after defeating the defending \azure\ Unit(s)) draws Cards from the Neutral Units \\azure\\ Deck until a Dragon not associated with any Faction is drawn.\n"
 "    The player may immediately Recruit that Dragon for free.\n"
 "\\end{itemize}\n"
 "\n"
