--- a/translations/recommendations.tex/pl.po
+++ b/translations/recommendations.tex/pl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-04-01 12:55+0000\n"
-"PO-Revision-Date: 2024-10-29 23:06+0000\n"
+"PO-Revision-Date: 2025-06-19 01:14+0200"
 "Last-Translator: krazanas <krazi321@gmail.com>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/sections/recommendations/pl/>\n"
@@ -313,22 +313,22 @@ msgstr ""
 #: sections/recommendations.tex:75
 #, no-wrap
 msgid ""
-"During Combat with Neutral Units in clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle Board, the player positioning the Neutral Units must do the same.\n"
+"During Combat with Neutral Units in Clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the Combat Board, the player positioning the Neutral Units must do the same.\n"
 "\n"
 msgstr ""
-"Podczas walki z Jednostkami Neutralnymi w trybie starcia, jeśli gracz zdecyduje się rozmieścić swoje Jednostki tylko na jednej połowie (lewej lub prawej) Planszy Walki, gracz rozmieszczający Jednostki Neutralne musi postąpić tak samo.\n"
+"Podczas walki z Jednostkami Neutralnymi w Trybie Starcia, jeśli gracz zdecyduje się rozmieścić swoje Jednostki tylko na jednej połowie (lewej lub prawej) Planszy Walki, gracz rozmieszczający Jednostki Neutralne musi postąpić tak samo.\n"
 "\n"
 
 #. type: multicols
 #: sections/recommendations.tex:79
 #, no-wrap
 msgid ""
-"Placing Neutral Units far apart only makes the other player waste MPs, which slows the game down.\n"
+"Placing Neutral Units far apart only makes the other player waste \svgeven{movement}, which slows the game down.\n"
 "The exception to this rule is when there are three Neutral \\svg{unit_ground} or \\svg{unit_flying} Units to position, as all of them must go to the front line.\n"
 "See examples that follow.\n"
 "\n"
 msgstr ""
-"Rozmieszczanie Jednostek Neutralnych daleko od siebie tylko sprawia, że drugi gracz marnuje Punkty Ruchu, co spowalnia grę.\n"
+"Rozmieszczanie Jednostek Neutralnych daleko od siebie tylko sprawia, że drugi gracz marnuje \svgeven{movement}, co spowalnia grę.\n"
 "Wyjątek od tej zasady stanowi sytuacja, gdy należy rozmieszczać trzy Jednostki Neutralne \\svg{unit_ground} lub \\svg{unit_flying}, ponieważ wszystkie muszą trafić do pierwszej linii.\n"
 "Zobacz następujące przykłady.\n"
 "\n"
