--- a/translations/recommendations.tex/cs.po
+++ b/translations/recommendations.tex/cs.po
@@ -322,12 +322,12 @@ msgstr ""
 #: sections/recommendations.tex:79
 #, no-wrap
 msgid ""
-"Placing Neutral Units far apart only makes the other player waste \svgeven{movement}, which slows the game down.\n"
+"Placing Neutral Units far apart only makes the other player waste \\svgeven{movement}, which slows the game down.\n"
 "The exception to this rule is when there are three Neutral \\svg{unit_ground} or \\svg{unit_flying} Units to position, as all of them must go to the front line.\n"
 "See examples that follow.\n"
 "\n"
 msgstr ""
-"Umístění Neutrálních Jednotek daleko od sebe jen přinutí druhého hráče plýtvat BP, což zpomaluje hru.\n"
+"Umístění Neutrálních Jednotek daleko od sebe jen přinutí druhého hráče plýtvat \\svgeven{movement}, což zpomaluje hru.\n"
 "Výjimkou z tohoto pravidla je, když je třeba umístit tři Neutrální \\svg{unit_ground} nebo \\svg{unit_flying} Jednotky, protože všechny musí jít do přední linie.\n"
 "Viz následující příklady.\n"
 "\n"
