--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -508,7 +508,7 @@ msgstr ""
 #: coops/sentinels.tex:121
 #, no-wrap
 msgid ""
-"  \\item Enemy armies have 3 \svgeven{movement} per Round.\n"
+"  \\item Enemy armies have 3 \\svgeven{movement} per Round.\n"
 "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
 "  \\item Enemy armies move as described in the rulebook (p.\\,33), but instead of capturing, they destroy everything in their path.\n"
 "    Place Black Cubes on any Field they pass through, treating those Fields as empty from that point on.\n"
@@ -516,7 +516,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"  \\item Wrogie armie mają 3 \svgeven{movement} na Rundę.\n"
+"  \\item Wrogie armie mają 3 \\svgeven{movement} na Rundę.\n"
 "  \\item Wrogie armie ruszają się na końcu każdej tury, zaczynając od tury, w której się pojawiły.\n"
 "  \\item Wrogie armie poruszają się zgodnie z opisem w Księdze Zasad (s.\\,33), ale zamiast zdobywania, niszczą wszystko na swojej drodze.\n"
 "    Umieść Czarną Kostkę na każdym Polu, przez które przechodzą, odtąd traktując te Pola jako puste.\n"
@@ -539,18 +539,18 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
-"  \\item Fighting enemy armies over more than one Combat Round does not cost \svgeven{movement}.\n"
+"  \\item Fighting enemy armies over more than one Combat Round does not cost \\svgeven{movement}.\n"
 "  \\item During a battle with an enemy army, a Hero can retreat whenever a friendly Unit is about to Activate.\n"
-"    A retreating Main Hero loses all remaining \svgeven{movement} and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.\n"
+"    A retreating Main Hero loses all remaining \\svgeven{movement} and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.\n"
 "  \\item Retreating Secondary Heroes are removed from the game, but their remaining Units are kept.\n"
 "  \\item Killed enemy Units do not respawn.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Walka z wrogimi armiami przez więcej niż jedną Rundę Walki nie kosztuje \svgeven{movement}.\n"
+"  \\item Walka z wrogimi armiami przez więcej niż jedną Rundę Walki nie kosztuje \\svgeven{movement}.\n"
 "  \\item Podczas Walki z wrogą armią Bohater może wycofać się, gdy ma zostać aktywowana dowolna Jednostka jego armii.\n"
-"    Wycofujący się główny Bohater traci wszystkie pozostałe \svgeven{movement} i wraca do wybranego przez siebie sojuszniczego Miasta albo Osady, zachowując wszystkie pozostałe Jednostki.\n"
+"    Wycofujący się główny Bohater traci wszystkie pozostałe \\svgeven{movement} i wraca do wybranego przez siebie sojuszniczego Miasta albo Osady, zachowując wszystkie pozostałe Jednostki.\n"
 "  \\item Wycofujący się Pomocniczy Bohaterowie są usuwani z gry, ale ich pozostałe Jednostki są zachowane.\n"
 "  \\item Zabite wrogie Jednostki nie odradzają się.\n"
 "\\end{itemize}\n"
