--- a/translations/titans_stronghold.tex/cs.po
+++ b/translations/titans_stronghold.tex/cs.po
@@ -463,7 +463,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "  \\item Any time a Hero enters the Titans' Stronghold, they draw 5 Cards from the Titans' Stronghold Deck instead of from the Neutral Unit Card Decks. The Units are placed on the Combat Board (see page 29, ``Neutral Unit Setup'' in the Core Rulebook). Players attempt to defeat the Units they find in the Titans' Stronghold. Any Neutral Units defeated during Combat in the Titans' Stronghold are returned to their respective Neutral Unit Decks instead of the Titans' Stronghold Deck. Any Neutral Units surviving Combat in the Titans' Stronghold are shuffled back into the Titans' Stronghold Deck. If there are not enough Unit Cards in this Deck, draw as many Unit Cards as are available and place them on the Combat Board.\n"
-"  \\item Combat in the Titans' Stronghold now costs 1 \svgeven{movement} to extend per Combat Round, just like Combat against non-Azure tier Units.\n"
+"  \\item Combat in the Titans' Stronghold now costs 1 \\svgeven{movement} to extend per Combat Round, just like Combat against non-Azure tier Units.\n"
 "  \\item Additionally, no player can:\n"
 "  \\begin{itemize}\n"
 "    \\item Attack other Heroes.\n"
@@ -473,7 +473,7 @@ msgid ""
 "\n"
 msgstr ""
 "  \\item Kdykoliv Hrdina vstoupí do Pevnosti Titánů, vytáhne 5 Karet z Balíčku Pevnosti Titánů místo z Balíčků Karet Neutrálních Jednotek. Jednotky jsou umístěny na Desku Bojiště (viz \\uv{Rozmístění Neutrálních Jednotek} na str. 29 v základních pravidlech). Hráči se pokoušejí porazit Jednotky, které najdou v Pevnosti Titánů. Jakékoliv Neutrální Jednotky poražené během Souboje v Pevnosti Titánů jsou vráceny do svých příslušných Balíčků Neutrálních Jednotek místo do Balíčku Pevnosti Titánů. Jakékoliv Neutrální Jednotky, které přežijí Souboj v Pevnosti Titánů jsou zamíchány zpět do Balíčku Pevnosti Titánů. Pokud v tomto Balíčku není dostatek Karet Jednotek, vytáhněte tolik Karet Jednotek, kolik je k dispozici, a umístěte je na Desku Bojiště.\n"
-"  \\item Souboj v Pevnosti Titánů nyní stojí 1 BP za prodloužení o další Kolo Souboje, stejně jako Souboj proti Jednotkám nižší než Azurové úrovně.\n"
+"  \\item Souboj v Pevnosti Titánů nyní stojí 1 \\svgeven{movement} za prodloužení o další Kolo Souboje, stejně jako Souboj proti Jednotkám nižší než Azurové úrovně.\n"
 "  \\item Navíc žádný hráč nemůže:\n"
 "  \\begin{itemize}\n"
 "    \\item Útočit na jiné Hrdiny.\n"
