--- a/translations/recommendations.tex/pl.po
+++ b/translations/recommendations.tex/pl.po
@@ -323,12 +323,12 @@ msgstr ""
 #: sections/recommendations.tex:79
 #, no-wrap
 msgid ""
-"Placing Neutral Units far apart only makes the other player waste \svgeven{movement}, which slows the game down.\n"
+"Placing Neutral Units far apart only makes the other player waste \\svgeven{movement}, which slows the game down.\n"
 "The exception to this rule is when there are three Neutral \\svg{unit_ground} or \\svg{unit_flying} Units to position, as all of them must go to the front line.\n"
 "See examples that follow.\n"
 "\n"
 msgstr ""
-"Rozmieszczanie Jednostek Neutralnych daleko od siebie tylko sprawia, że drugi gracz marnuje \svgeven{movement}, co spowalnia grę.\n"
+"Rozmieszczanie Jednostek Neutralnych daleko od siebie tylko sprawia, że drugi gracz marnuje \\svgeven{movement}, co spowalnia grę.\n"
 "Wyjątek od tej zasady stanowi sytuacja, gdy należy rozmieszczać trzy Jednostki Neutralne \\svg{unit_ground} lub \\svg{unit_flying}, ponieważ wszystkie muszą trafić do pierwszej linii.\n"
 "Zobacz następujące przykłady.\n"
 "\n"
